WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193642
Fix the position of layers nested inside of composited overflow-scroll
https://bugs.webkit.org/show_bug.cgi?id=193642
Summary
Fix the position of layers nested inside of composited overflow-scroll
Simon Fraser (smfr)
Reported
2019-01-20 19:52:02 PST
Fix the position of layers nested inside of composited overflow-scroll
Attachments
Patch
(6.32 KB, patch)
2019-01-20 20:21 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews121 for ios-simulator-wk2
(2.58 MB, application/zip)
2019-01-20 22:16 PST
,
EWS Watchlist
no flags
Details
Patch
(6.83 KB, patch)
2019-01-21 08:05 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(2.39 MB, application/zip)
2019-01-21 10:04 PST
,
EWS Watchlist
no flags
Details
Patch
(6.98 KB, patch)
2019-01-22 08:24 PST
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-01-20 20:21:04 PST
Created
attachment 359667
[details]
Patch
EWS Watchlist
Comment 2
2019-01-20 22:16:45 PST
Comment hidden (obsolete)
Comment on
attachment 359667
[details]
Patch
Attachment 359667
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10825322
New failing tests: compositing/geometry/fixed-inside-overflow-scroll.html
EWS Watchlist
Comment 3
2019-01-20 22:16:47 PST
Comment hidden (obsolete)
Created
attachment 359670
[details]
Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Simon Fraser (smfr)
Comment 4
2019-01-21 08:05:40 PST
Created
attachment 359692
[details]
Patch
EWS Watchlist
Comment 5
2019-01-21 10:04:00 PST
Comment hidden (obsolete)
Comment on
attachment 359692
[details]
Patch
Attachment 359692
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10830128
New failing tests: compositing/geometry/fixed-inside-overflow-scroll.html
EWS Watchlist
Comment 6
2019-01-21 10:04:02 PST
Comment hidden (obsolete)
Created
attachment 359695
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Simon Fraser (smfr)
Comment 7
2019-01-22 08:24:25 PST
Created
attachment 359737
[details]
Patch
Simon Fraser (smfr)
Comment 8
2019-01-22 17:36:00 PST
https://trac.webkit.org/changeset/240271/webkit
Radar WebKit Bug Importer
Comment 9
2019-01-22 17:36:31 PST
<
rdar://problem/47467122
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug