Fix the position of layers nested inside of composited overflow-scroll https://bugs.webkit.org/show_bug.cgi?id=193642

Reviewed by Antti Koivisto and Sam Weinig.
Source/WebCore:

Remove an iOS #ifdef so that layers inside composited overflow gets the correct
positions on macOS too.

Test: compositing/geometry/fixed-inside-overflow-scroll.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::computeParentGraphicsLayerRect const):

LayoutTests:

Ref test. Black bar obscures the area that's different because of overlay/non-overlay
scrollbar differences between macOS and iOS.

* compositing/geometry/fixed-inside-overflow-scroll-expected.html: Added.
* compositing/geometry/fixed-inside-overflow-scroll.html: Added.

Canonical link: https://commits.webkit.org/208183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240271 268f45cc-cd09-0410-ab3c-d52691b4dbfc